--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "swr": "^2.2.5",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://poongundra.github.io/diagnal",
   "scripts": {
+    "predeploy": "npm run build",
+  "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "tailwindcss": "^3.4.4"
   }
 }
